[package]
name = "bb8-ldap"
version = "0.1.0"
edition = "2021"
authors = ["Iain H <iain@spiralpoint.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"]}

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
